# basiliq_db_test_utils

./: .gitlab-ci.yml  Cargo.toml  basiliq_test_db.dump  export_test_db_dump.sh
basiliq_db_init/: Cargo.toml
basiliq_db_init/src/: main.rs
basiliq_db_test_proc_macro/: Cargo.toml
basiliq_db_test_proc_macro/src/: lib.rs
basiliq_db_test_utils/: Cargo.toml
basiliq_db_test_utils/init_values_sql/: init_article_1.sql  init_article_2.sql  init_article_3.sql  init_article_author.sql  init_comment_1.sql  init_comment_2.sql  init_comment_3.sql  init_favorite_color_1.sql  init_favorite_color_2.sql  init_favorite_color_3.sql  init_peoples_1.sql  init_peoples_2.sql  init_peoples_3.sql
basiliq_db_test_utils/src/: db.rs  init_values.rs  lib.rs
basiliq_db_test_utils/tests_migrations/: V5__comments.sql  V6__article_author.sql
