[package]
name = "basiliq_db_init"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.basiliq_db_test_utils]
path = "../basiliq_db_test_utils"

[dependencies.tokio]
version = "1"
features = ["full"]
