[package]
name = "basiliq_db_test_proc_macro"
version = "0.1.0"
authors = ["Francis Le Roy <francis.leroy@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version="1",features=["full","fold"]}
quote = "1.0.8"
proc-macro2 = "1"
basiliq_db_test_utils = { version = "*", path = "../basiliq_db_test_utils", package = "basiliq_db_test_utils"}
